  * Document hw-detect/load_firmware. Closes: #493845

  [ Ryan Niebur ]
  * Added documentation for RAID 6 and 10.

  [ Jérémy Bobbio ]
  * Explicitly mention that preseeded keymaps must be known to d-i.
    Closes: #493720
  * Mention parman-md/device_remove_md in preseeding appendix.

  [ Frans Pop ]
  * Restructure supported hardware section.

 -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 18:04:50 +0200

installation-guide (20080520) unstable; urgency=medium

  [ Frans Pop ]
  * Clarify console switching for the graphical installer.
    Thanks to Tim Richardson for the suggestion.

  [ Colin Watson ]
  * Spell "multiselect" correctly in apt-setup/services-select preseeding
    example.
  * Note that an empty preseed file is equivalent to a normal manual
    installation (thanks, Nathan Sutton).

  [ Robert Millan ]
  * Document how to start the installer from Windows.

  [ Frans Pop ]
  * Document installation using multiple CD/DVDs; update text about using a
    mirror in line with that.
  * Lenny will be version 5.0.
  * Warn about boot issues when using RAID on the root file system.
  * Update task selection section for changes in desktop task preseeding.
  * Fix double / in links, spotted by Stanislav Gromov. Closes: #472813.
  * Document new boot parameters to define mouse protocol and device (port)
    for the graphical installer.
  * Correct command to use to allow preseeding of netcfg when using a
    preconfiguration file downloaded from a server (preseed/url).
    Thanks to Durk Strooisma for the report and analysis. Closes: #476524.
  * Specify for which release the example preseed file is valid.
  * Document preseeding of grub password.
  * Update how to suppress the removal of existing LVM data using preseeding.
  * Update version of X11 used in Lenny.
  * Update kernel versions.
  * Update memory requirements for i386 and amd64. Elaborate on installing
    systems with less memory than the listed minimum.