@@ -19,15 +19,7 @@ are supported, including all varieties of Intel's "Pentium" series.
 This also includes 32-bit AMD and VIA (former Cyrix) processors, and
 processors like the Athlon XP and Intel P4 Xeon.
 
-</para>
-<note><para>
-
-If your system has a 64-bit processor from the AMD64 or Intel EM64T families,
-you will probably want to use the installer for the amd64 architecture instead
-of the installer for the (32-bit) i386 architecture.
-
-</para></note>
-<para>
+</para><para>
 
 However, Debian GNU/Linux &releasename; will <emphasis>not</emphasis> run
 on 386 or earlier processors.  Despite the architecture name "i386", support
@@ -59,9 +51,14 @@ be easily used by most Debian packages; now they can.
 
 </footnote>.
 
-</para><para>
-
 </para>
+<note><para>
+
+If your system has a 64-bit processor from the AMD64 or Intel EM64T families,
+you will probably want to use the installer for the amd64 architecture instead
+of the installer for the (32-bit) i386 architecture.
+
+</para></note>
    </sect3>
 
    <sect3 id="bus"><title>I/O Bus</title>
