@@ -32,8 +32,13 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
 
   [ Frans Pop ]
   * Restructure supported hardware section.
+  * Update of supported subarches/flavors for powerpc.
+  * hardware-supported:
+    - suppress m68k from arches table, unless building for m68k
+    - show which subarches are supported by arm/armel
+    - various minor updates and improvements
 
- -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 18:04:50 +0200
+ -- Frans Pop <fjp@debian.org>  Fri, 03 Oct 2008 18:52:25 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
